--- a/FrontEnd/DishDash/src/index.html
+++ b/FrontEnd/DishDash/src/index.html
@@ -6,7 +6,7 @@
   <title>DishDash - Best Food Delivery App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/images/favicon_3.jpg">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon_v2.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
